Quick fix to home page overflow

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,4 +1,5 @@
 .home-page {
+  overflow: hidden;
   .text-zone {
     position: absolute;
     left: 10%;
